# mlops

./: .gitignore  README.md  pyproject.toml
neptune.ai/: Neptune_E2E_Model_Tracking.ipynb
optuna/: optuna-pytorch.py  sklearn-optuna.py
